# serializer version: 1
# name: test_all_entities[sensor.kaco_powador_6400xi_1_ac_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_1_ac_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AC power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'AC power',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ac_power',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_1_ac_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_ac_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (1) AC power',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_1_ac_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '635',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_daily_yield-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_1_daily_yield',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Daily yield',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Daily yield',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'daily_yield',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_1_daily_yield',
    'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_daily_yield-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (1) Daily yield',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_1_daily_yield',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '33801',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ac_current_limit_reached',
        'check_dc_isolator_switch',
        'check_overvoltage_protection',
        'communication_error',
        'constant_voltage_mode',
        'control_card_overtemperature',
        'critical_overvoltage_l1',
        'critical_overvoltage_l2',
        'critical_overvoltage_l3',
        'critical_undervoltage_l1',
        'critical_undervoltage_l2',
        'critical_undervoltage_l3',
        'dc_dc_converter_communication_error',
        'dc_feed_in_error',
        'dc_ground_fault',
        'dc_link_error',
        'dc_overvoltage_waiting_for_pv_voltage_to_drop',
        'dsp_error',
        'extended_selftest',
        'external_power_limiting_active',
        'external_reactive_power_demand',
        'fan_1_failure',
        'fan_2_failure',
        'fan_3_failure',
        'fault_finding_mode',
        'frequency_dependent_power_reduction',
        'grid_average_voltage_fault',
        'grid_failure',
        'grid_mean_voltage_over_l1',
        'grid_mean_voltage_over_l2',
        'grid_mean_voltage_under_l1',
        'grid_mean_voltage_under_l2',
        'grid_overfrequency',
        'grid_overvoltage_l1',
        'grid_overvoltage_l2',
        'grid_overvoltage_l3',
        'grid_phase_conductor_fault',
        'grid_underfrequency',
        'grid_undervoltage_l1',
        'grid_undervoltage_l2',
        'grid_undervoltage_l3',
        'hardware_error',
        'insulation_measurement',
        'insulation_measurement_not_possible',
        'insulation_resistance_too_low',
        'island_operation_error',
        'island_operation_pac',
        'measurement_transformer_error',
        'mpp_tracking',
        'negative_pv_current_1',
        'negative_pv_current_2',
        'negative_pv_current_3',
        'night_shutdown',
        'operation_inhibited',
        'overload_shutdown',
        'overtemperature_shutdown',
        'overvoltage_shutdown',
        'plausibility_error',
        'plausibility_error_afi_module',
        'plausibility_error_dc_dc',
        'plausibility_error_efficiency',
        'plausibility_error_relay_voltage',
        'plausibility_error_temperature_sensor',
        'plausibility_error_voltage',
        'powador_protect_shutdown',
        'power_limiting_active',
        'power_unit_1_failure',
        'power_unit_2_failure',
        'power_unit_3_failure',
        'protective_shutdown_hardware',
        'protective_shutdown_pv_string_1',
        'protective_shutdown_pv_string_2',
        'protective_shutdown_pv_string_3',
        'protective_shutdown_software',
        'pv_overvoltage_1',
        'pv_overvoltage_2',
        'pv_overvoltage_3',
        'pv_overvoltage_error',
        'rcd_module_error',
        'relay_test',
        'residual_current_shutdown_afi_rcd',
        'residual_current_too_high',
        'rocof_error',
        'selftest_error',
        'selftest_error_buffer_1',
        'selftest_error_buffer_2',
        'selftest_error_relay_1',
        'selftest_error_relay_2',
        'selftest_in_progress',
        'shutdown_1_5v_supply_collapse',
        'shutdown_2_5v_supply_collapse',
        'shutdown_5v_supply_collapse',
        'shutdown_dc_link_asymmetry',
        'shutdown_dc_link_overvoltage',
        'shutdown_dc_link_undervoltage',
        'shutdown_grid_voltage_l1',
        'shutdown_grid_voltage_l2',
        'shutdown_grid_voltage_l3',
        'shutdown_hardware_buffer_enable',
        'shutdown_hardware_gate_driver',
        'shutdown_hardware_overcurrent',
        'shutdown_hardware_overtemperature',
        'shutdown_overcurrent_l1',
        'shutdown_overcurrent_l2',
        'shutdown_overcurrent_l3',
        'snow_melting',
        'startup',
        'temperature_sensor_defective',
        'testing_grid_relay',
        'testing_l_electronics',
        'unknown_hardware',
        'waiting',
        'waiting_for_dc_voltage',
        'waiting_for_reconnect',
        'waiting_for_shutdown',
        'waiting_for_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_1_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_1_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (1) Status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ac_current_limit_reached',
        'check_dc_isolator_switch',
        'check_overvoltage_protection',
        'communication_error',
        'constant_voltage_mode',
        'control_card_overtemperature',
        'critical_overvoltage_l1',
        'critical_overvoltage_l2',
        'critical_overvoltage_l3',
        'critical_undervoltage_l1',
        'critical_undervoltage_l2',
        'critical_undervoltage_l3',
        'dc_dc_converter_communication_error',
        'dc_feed_in_error',
        'dc_ground_fault',
        'dc_link_error',
        'dc_overvoltage_waiting_for_pv_voltage_to_drop',
        'dsp_error',
        'extended_selftest',
        'external_power_limiting_active',
        'external_reactive_power_demand',
        'fan_1_failure',
        'fan_2_failure',
        'fan_3_failure',
        'fault_finding_mode',
        'frequency_dependent_power_reduction',
        'grid_average_voltage_fault',
        'grid_failure',
        'grid_mean_voltage_over_l1',
        'grid_mean_voltage_over_l2',
        'grid_mean_voltage_under_l1',
        'grid_mean_voltage_under_l2',
        'grid_overfrequency',
        'grid_overvoltage_l1',
        'grid_overvoltage_l2',
        'grid_overvoltage_l3',
        'grid_phase_conductor_fault',
        'grid_underfrequency',
        'grid_undervoltage_l1',
        'grid_undervoltage_l2',
        'grid_undervoltage_l3',
        'hardware_error',
        'insulation_measurement',
        'insulation_measurement_not_possible',
        'insulation_resistance_too_low',
        'island_operation_error',
        'island_operation_pac',
        'measurement_transformer_error',
        'mpp_tracking',
        'negative_pv_current_1',
        'negative_pv_current_2',
        'negative_pv_current_3',
        'night_shutdown',
        'operation_inhibited',
        'overload_shutdown',
        'overtemperature_shutdown',
        'overvoltage_shutdown',
        'plausibility_error',
        'plausibility_error_afi_module',
        'plausibility_error_dc_dc',
        'plausibility_error_efficiency',
        'plausibility_error_relay_voltage',
        'plausibility_error_temperature_sensor',
        'plausibility_error_voltage',
        'powador_protect_shutdown',
        'power_limiting_active',
        'power_unit_1_failure',
        'power_unit_2_failure',
        'power_unit_3_failure',
        'protective_shutdown_hardware',
        'protective_shutdown_pv_string_1',
        'protective_shutdown_pv_string_2',
        'protective_shutdown_pv_string_3',
        'protective_shutdown_software',
        'pv_overvoltage_1',
        'pv_overvoltage_2',
        'pv_overvoltage_3',
        'pv_overvoltage_error',
        'rcd_module_error',
        'relay_test',
        'residual_current_shutdown_afi_rcd',
        'residual_current_too_high',
        'rocof_error',
        'selftest_error',
        'selftest_error_buffer_1',
        'selftest_error_buffer_2',
        'selftest_error_relay_1',
        'selftest_error_relay_2',
        'selftest_in_progress',
        'shutdown_1_5v_supply_collapse',
        'shutdown_2_5v_supply_collapse',
        'shutdown_5v_supply_collapse',
        'shutdown_dc_link_asymmetry',
        'shutdown_dc_link_overvoltage',
        'shutdown_dc_link_undervoltage',
        'shutdown_grid_voltage_l1',
        'shutdown_grid_voltage_l2',
        'shutdown_grid_voltage_l3',
        'shutdown_hardware_buffer_enable',
        'shutdown_hardware_gate_driver',
        'shutdown_hardware_overcurrent',
        'shutdown_hardware_overtemperature',
        'shutdown_overcurrent_l1',
        'shutdown_overcurrent_l2',
        'shutdown_overcurrent_l3',
        'snow_melting',
        'startup',
        'temperature_sensor_defective',
        'testing_grid_relay',
        'testing_l_electronics',
        'unknown_hardware',
        'waiting',
        'waiting_for_dc_voltage',
        'waiting_for_reconnect',
        'waiting_for_shutdown',
        'waiting_for_wind',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_1_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'mpp_tracking',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_total_yield-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_1_total_yield',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total yield',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total yield',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_yield',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_1_total_yield',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_1_total_yield-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (1) Total yield',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_1_total_yield',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '112706',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_ac_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_2_ac_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AC power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'AC power',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ac_power',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_2_ac_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_ac_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (2) AC power',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_2_ac_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '635',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_daily_yield-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_2_daily_yield',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Daily yield',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Daily yield',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'daily_yield',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_2_daily_yield',
    'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_daily_yield-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (2) Daily yield',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_2_daily_yield',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '33801',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ac_current_limit_reached',
        'check_dc_isolator_switch',
        'check_overvoltage_protection',
        'communication_error',
        'constant_voltage_mode',
        'control_card_overtemperature',
        'critical_overvoltage_l1',
        'critical_overvoltage_l2',
        'critical_overvoltage_l3',
        'critical_undervoltage_l1',
        'critical_undervoltage_l2',
        'critical_undervoltage_l3',
        'dc_dc_converter_communication_error',
        'dc_feed_in_error',
        'dc_ground_fault',
        'dc_link_error',
        'dc_overvoltage_waiting_for_pv_voltage_to_drop',
        'dsp_error',
        'extended_selftest',
        'external_power_limiting_active',
        'external_reactive_power_demand',
        'fan_1_failure',
        'fan_2_failure',
        'fan_3_failure',
        'fault_finding_mode',
        'frequency_dependent_power_reduction',
        'grid_average_voltage_fault',
        'grid_failure',
        'grid_mean_voltage_over_l1',
        'grid_mean_voltage_over_l2',
        'grid_mean_voltage_under_l1',
        'grid_mean_voltage_under_l2',
        'grid_overfrequency',
        'grid_overvoltage_l1',
        'grid_overvoltage_l2',
        'grid_overvoltage_l3',
        'grid_phase_conductor_fault',
        'grid_underfrequency',
        'grid_undervoltage_l1',
        'grid_undervoltage_l2',
        'grid_undervoltage_l3',
        'hardware_error',
        'insulation_measurement',
        'insulation_measurement_not_possible',
        'insulation_resistance_too_low',
        'island_operation_error',
        'island_operation_pac',
        'measurement_transformer_error',
        'mpp_tracking',
        'negative_pv_current_1',
        'negative_pv_current_2',
        'negative_pv_current_3',
        'night_shutdown',
        'operation_inhibited',
        'overload_shutdown',
        'overtemperature_shutdown',
        'overvoltage_shutdown',
        'plausibility_error',
        'plausibility_error_afi_module',
        'plausibility_error_dc_dc',
        'plausibility_error_efficiency',
        'plausibility_error_relay_voltage',
        'plausibility_error_temperature_sensor',
        'plausibility_error_voltage',
        'powador_protect_shutdown',
        'power_limiting_active',
        'power_unit_1_failure',
        'power_unit_2_failure',
        'power_unit_3_failure',
        'protective_shutdown_hardware',
        'protective_shutdown_pv_string_1',
        'protective_shutdown_pv_string_2',
        'protective_shutdown_pv_string_3',
        'protective_shutdown_software',
        'pv_overvoltage_1',
        'pv_overvoltage_2',
        'pv_overvoltage_3',
        'pv_overvoltage_error',
        'rcd_module_error',
        'relay_test',
        'residual_current_shutdown_afi_rcd',
        'residual_current_too_high',
        'rocof_error',
        'selftest_error',
        'selftest_error_buffer_1',
        'selftest_error_buffer_2',
        'selftest_error_relay_1',
        'selftest_error_relay_2',
        'selftest_in_progress',
        'shutdown_1_5v_supply_collapse',
        'shutdown_2_5v_supply_collapse',
        'shutdown_5v_supply_collapse',
        'shutdown_dc_link_asymmetry',
        'shutdown_dc_link_overvoltage',
        'shutdown_dc_link_undervoltage',
        'shutdown_grid_voltage_l1',
        'shutdown_grid_voltage_l2',
        'shutdown_grid_voltage_l3',
        'shutdown_hardware_buffer_enable',
        'shutdown_hardware_gate_driver',
        'shutdown_hardware_overcurrent',
        'shutdown_hardware_overtemperature',
        'shutdown_overcurrent_l1',
        'shutdown_overcurrent_l2',
        'shutdown_overcurrent_l3',
        'snow_melting',
        'startup',
        'temperature_sensor_defective',
        'testing_grid_relay',
        'testing_l_electronics',
        'unknown_hardware',
        'waiting',
        'waiting_for_dc_voltage',
        'waiting_for_reconnect',
        'waiting_for_shutdown',
        'waiting_for_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_2_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_2_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (2) Status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ac_current_limit_reached',
        'check_dc_isolator_switch',
        'check_overvoltage_protection',
        'communication_error',
        'constant_voltage_mode',
        'control_card_overtemperature',
        'critical_overvoltage_l1',
        'critical_overvoltage_l2',
        'critical_overvoltage_l3',
        'critical_undervoltage_l1',
        'critical_undervoltage_l2',
        'critical_undervoltage_l3',
        'dc_dc_converter_communication_error',
        'dc_feed_in_error',
        'dc_ground_fault',
        'dc_link_error',
        'dc_overvoltage_waiting_for_pv_voltage_to_drop',
        'dsp_error',
        'extended_selftest',
        'external_power_limiting_active',
        'external_reactive_power_demand',
        'fan_1_failure',
        'fan_2_failure',
        'fan_3_failure',
        'fault_finding_mode',
        'frequency_dependent_power_reduction',
        'grid_average_voltage_fault',
        'grid_failure',
        'grid_mean_voltage_over_l1',
        'grid_mean_voltage_over_l2',
        'grid_mean_voltage_under_l1',
        'grid_mean_voltage_under_l2',
        'grid_overfrequency',
        'grid_overvoltage_l1',
        'grid_overvoltage_l2',
        'grid_overvoltage_l3',
        'grid_phase_conductor_fault',
        'grid_underfrequency',
        'grid_undervoltage_l1',
        'grid_undervoltage_l2',
        'grid_undervoltage_l3',
        'hardware_error',
        'insulation_measurement',
        'insulation_measurement_not_possible',
        'insulation_resistance_too_low',
        'island_operation_error',
        'island_operation_pac',
        'measurement_transformer_error',
        'mpp_tracking',
        'negative_pv_current_1',
        'negative_pv_current_2',
        'negative_pv_current_3',
        'night_shutdown',
        'operation_inhibited',
        'overload_shutdown',
        'overtemperature_shutdown',
        'overvoltage_shutdown',
        'plausibility_error',
        'plausibility_error_afi_module',
        'plausibility_error_dc_dc',
        'plausibility_error_efficiency',
        'plausibility_error_relay_voltage',
        'plausibility_error_temperature_sensor',
        'plausibility_error_voltage',
        'powador_protect_shutdown',
        'power_limiting_active',
        'power_unit_1_failure',
        'power_unit_2_failure',
        'power_unit_3_failure',
        'protective_shutdown_hardware',
        'protective_shutdown_pv_string_1',
        'protective_shutdown_pv_string_2',
        'protective_shutdown_pv_string_3',
        'protective_shutdown_software',
        'pv_overvoltage_1',
        'pv_overvoltage_2',
        'pv_overvoltage_3',
        'pv_overvoltage_error',
        'rcd_module_error',
        'relay_test',
        'residual_current_shutdown_afi_rcd',
        'residual_current_too_high',
        'rocof_error',
        'selftest_error',
        'selftest_error_buffer_1',
        'selftest_error_buffer_2',
        'selftest_error_relay_1',
        'selftest_error_relay_2',
        'selftest_in_progress',
        'shutdown_1_5v_supply_collapse',
        'shutdown_2_5v_supply_collapse',
        'shutdown_5v_supply_collapse',
        'shutdown_dc_link_asymmetry',
        'shutdown_dc_link_overvoltage',
        'shutdown_dc_link_undervoltage',
        'shutdown_grid_voltage_l1',
        'shutdown_grid_voltage_l2',
        'shutdown_grid_voltage_l3',
        'shutdown_hardware_buffer_enable',
        'shutdown_hardware_gate_driver',
        'shutdown_hardware_overcurrent',
        'shutdown_hardware_overtemperature',
        'shutdown_overcurrent_l1',
        'shutdown_overcurrent_l2',
        'shutdown_overcurrent_l3',
        'snow_melting',
        'startup',
        'temperature_sensor_defective',
        'testing_grid_relay',
        'testing_l_electronics',
        'unknown_hardware',
        'waiting',
        'waiting_for_dc_voltage',
        'waiting_for_reconnect',
        'waiting_for_shutdown',
        'waiting_for_wind',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_2_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'mpp_tracking',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_total_yield-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_6400xi_2_total_yield',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total yield',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total yield',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_yield',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_2_total_yield',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_6400xi_2_total_yield-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 6400xi (2) Total yield',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_6400xi_2_total_yield',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '112706',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_ac_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_8000xi_4_ac_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AC power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'AC power',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ac_power',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_4_ac_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_ac_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 8000xi (4) AC power',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_8000xi_4_ac_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '681',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_daily_yield-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_8000xi_4_daily_yield',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Daily yield',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Daily yield',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'daily_yield',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_4_daily_yield',
    'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_daily_yield-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 8000xi (4) Daily yield',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_8000xi_4_daily_yield',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38749',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ac_current_limit_reached',
        'check_dc_isolator_switch',
        'check_overvoltage_protection',
        'communication_error',
        'constant_voltage_mode',
        'control_card_overtemperature',
        'critical_overvoltage_l1',
        'critical_overvoltage_l2',
        'critical_overvoltage_l3',
        'critical_undervoltage_l1',
        'critical_undervoltage_l2',
        'critical_undervoltage_l3',
        'dc_dc_converter_communication_error',
        'dc_feed_in_error',
        'dc_ground_fault',
        'dc_link_error',
        'dc_overvoltage_waiting_for_pv_voltage_to_drop',
        'dsp_error',
        'extended_selftest',
        'external_power_limiting_active',
        'external_reactive_power_demand',
        'fan_1_failure',
        'fan_2_failure',
        'fan_3_failure',
        'fault_finding_mode',
        'frequency_dependent_power_reduction',
        'grid_average_voltage_fault',
        'grid_failure',
        'grid_mean_voltage_over_l1',
        'grid_mean_voltage_over_l2',
        'grid_mean_voltage_under_l1',
        'grid_mean_voltage_under_l2',
        'grid_overfrequency',
        'grid_overvoltage_l1',
        'grid_overvoltage_l2',
        'grid_overvoltage_l3',
        'grid_phase_conductor_fault',
        'grid_underfrequency',
        'grid_undervoltage_l1',
        'grid_undervoltage_l2',
        'grid_undervoltage_l3',
        'hardware_error',
        'insulation_measurement',
        'insulation_measurement_not_possible',
        'insulation_resistance_too_low',
        'island_operation_error',
        'island_operation_pac',
        'measurement_transformer_error',
        'mpp_tracking',
        'negative_pv_current_1',
        'negative_pv_current_2',
        'negative_pv_current_3',
        'night_shutdown',
        'operation_inhibited',
        'overload_shutdown',
        'overtemperature_shutdown',
        'overvoltage_shutdown',
        'plausibility_error',
        'plausibility_error_afi_module',
        'plausibility_error_dc_dc',
        'plausibility_error_efficiency',
        'plausibility_error_relay_voltage',
        'plausibility_error_temperature_sensor',
        'plausibility_error_voltage',
        'powador_protect_shutdown',
        'power_limiting_active',
        'power_unit_1_failure',
        'power_unit_2_failure',
        'power_unit_3_failure',
        'protective_shutdown_hardware',
        'protective_shutdown_pv_string_1',
        'protective_shutdown_pv_string_2',
        'protective_shutdown_pv_string_3',
        'protective_shutdown_software',
        'pv_overvoltage_1',
        'pv_overvoltage_2',
        'pv_overvoltage_3',
        'pv_overvoltage_error',
        'rcd_module_error',
        'relay_test',
        'residual_current_shutdown_afi_rcd',
        'residual_current_too_high',
        'rocof_error',
        'selftest_error',
        'selftest_error_buffer_1',
        'selftest_error_buffer_2',
        'selftest_error_relay_1',
        'selftest_error_relay_2',
        'selftest_in_progress',
        'shutdown_1_5v_supply_collapse',
        'shutdown_2_5v_supply_collapse',
        'shutdown_5v_supply_collapse',
        'shutdown_dc_link_asymmetry',
        'shutdown_dc_link_overvoltage',
        'shutdown_dc_link_undervoltage',
        'shutdown_grid_voltage_l1',
        'shutdown_grid_voltage_l2',
        'shutdown_grid_voltage_l3',
        'shutdown_hardware_buffer_enable',
        'shutdown_hardware_gate_driver',
        'shutdown_hardware_overcurrent',
        'shutdown_hardware_overtemperature',
        'shutdown_overcurrent_l1',
        'shutdown_overcurrent_l2',
        'shutdown_overcurrent_l3',
        'snow_melting',
        'startup',
        'temperature_sensor_defective',
        'testing_grid_relay',
        'testing_l_electronics',
        'unknown_hardware',
        'waiting',
        'waiting_for_dc_voltage',
        'waiting_for_reconnect',
        'waiting_for_shutdown',
        'waiting_for_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_8000xi_4_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_4_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 8000xi (4) Status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ac_current_limit_reached',
        'check_dc_isolator_switch',
        'check_overvoltage_protection',
        'communication_error',
        'constant_voltage_mode',
        'control_card_overtemperature',
        'critical_overvoltage_l1',
        'critical_overvoltage_l2',
        'critical_overvoltage_l3',
        'critical_undervoltage_l1',
        'critical_undervoltage_l2',
        'critical_undervoltage_l3',
        'dc_dc_converter_communication_error',
        'dc_feed_in_error',
        'dc_ground_fault',
        'dc_link_error',
        'dc_overvoltage_waiting_for_pv_voltage_to_drop',
        'dsp_error',
        'extended_selftest',
        'external_power_limiting_active',
        'external_reactive_power_demand',
        'fan_1_failure',
        'fan_2_failure',
        'fan_3_failure',
        'fault_finding_mode',
        'frequency_dependent_power_reduction',
        'grid_average_voltage_fault',
        'grid_failure',
        'grid_mean_voltage_over_l1',
        'grid_mean_voltage_over_l2',
        'grid_mean_voltage_under_l1',
        'grid_mean_voltage_under_l2',
        'grid_overfrequency',
        'grid_overvoltage_l1',
        'grid_overvoltage_l2',
        'grid_overvoltage_l3',
        'grid_phase_conductor_fault',
        'grid_underfrequency',
        'grid_undervoltage_l1',
        'grid_undervoltage_l2',
        'grid_undervoltage_l3',
        'hardware_error',
        'insulation_measurement',
        'insulation_measurement_not_possible',
        'insulation_resistance_too_low',
        'island_operation_error',
        'island_operation_pac',
        'measurement_transformer_error',
        'mpp_tracking',
        'negative_pv_current_1',
        'negative_pv_current_2',
        'negative_pv_current_3',
        'night_shutdown',
        'operation_inhibited',
        'overload_shutdown',
        'overtemperature_shutdown',
        'overvoltage_shutdown',
        'plausibility_error',
        'plausibility_error_afi_module',
        'plausibility_error_dc_dc',
        'plausibility_error_efficiency',
        'plausibility_error_relay_voltage',
        'plausibility_error_temperature_sensor',
        'plausibility_error_voltage',
        'powador_protect_shutdown',
        'power_limiting_active',
        'power_unit_1_failure',
        'power_unit_2_failure',
        'power_unit_3_failure',
        'protective_shutdown_hardware',
        'protective_shutdown_pv_string_1',
        'protective_shutdown_pv_string_2',
        'protective_shutdown_pv_string_3',
        'protective_shutdown_software',
        'pv_overvoltage_1',
        'pv_overvoltage_2',
        'pv_overvoltage_3',
        'pv_overvoltage_error',
        'rcd_module_error',
        'relay_test',
        'residual_current_shutdown_afi_rcd',
        'residual_current_too_high',
        'rocof_error',
        'selftest_error',
        'selftest_error_buffer_1',
        'selftest_error_buffer_2',
        'selftest_error_relay_1',
        'selftest_error_relay_2',
        'selftest_in_progress',
        'shutdown_1_5v_supply_collapse',
        'shutdown_2_5v_supply_collapse',
        'shutdown_5v_supply_collapse',
        'shutdown_dc_link_asymmetry',
        'shutdown_dc_link_overvoltage',
        'shutdown_dc_link_undervoltage',
        'shutdown_grid_voltage_l1',
        'shutdown_grid_voltage_l2',
        'shutdown_grid_voltage_l3',
        'shutdown_hardware_buffer_enable',
        'shutdown_hardware_gate_driver',
        'shutdown_hardware_overcurrent',
        'shutdown_hardware_overtemperature',
        'shutdown_overcurrent_l1',
        'shutdown_overcurrent_l2',
        'shutdown_overcurrent_l3',
        'snow_melting',
        'startup',
        'temperature_sensor_defective',
        'testing_grid_relay',
        'testing_l_electronics',
        'unknown_hardware',
        'waiting',
        'waiting_for_dc_voltage',
        'waiting_for_reconnect',
        'waiting_for_shutdown',
        'waiting_for_wind',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_8000xi_4_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'mpp_tracking',
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_total_yield-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kaco_powador_8000xi_4_total_yield',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total yield',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total yield',
    'platform': 'kaco_rs485',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_yield',
    'unique_id': '01JRS485KACOENTRYIDFORTESTS_4_total_yield',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_all_entities[sensor.kaco_powador_8000xi_4_total_yield-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'KACO Powador 8000xi (4) Total yield',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kaco_powador_8000xi_4_total_yield',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '133788',
  })
# ---
